kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: easyshop
  labels:
    name: easyshop
    environment: production
