kubernetes/easyshop-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: easyshop-deployment
  namespace: easyshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
      containers:
        - name: easyshop
          image: divs11/easyshop
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 20
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
