kubernetes/easyshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-svc
  namespace: easyshop
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: easyshop
