kubernetes/mongodb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
  namespace: easyshop
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
