kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: "34.249.219.6.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: easyshop-svc
                port:
                  number: 80
